# IoB

./: .env.example  .gitignore  README.md  docker-compose.yml
UI/: .dockerignore  Dockerfile  nginx.conf
UI/app/: package-lock.json  package.json
UI/app/src/components/: Details.js
UI/app/src/components/ui/complex/: ConfirmTextarea.js  (+2 more)
UI/app/webpack/: webpack.dev.js
attack_flow_builder/: Dockerfile  LICENSE  NOTICE  nginx.conf  package-lock.json  package.json
attack_flow_builder/attack/: update_attack_intel.js
attack_flow_builder/src/: App.vue
attack_flow_builder/src/store/: StoreTypes.ts
cti-stix-visualization/: package-lock.json
sanic_web_server/: Dockerfile  pyproject.toml
sanic_web_server/docs/: Notes on the IoB design (2).docx  Specification of RCTI server code.docx  stix_bundle_global_flow_20250716_112525.json  stix_bundle_global_flow_20250725_151935.json  stix_mapping .xlsx
sanic_web_server/docs/attackflow_graphs/: Fourth.afb  Fourth.json  Resilmesh-RCTI-UberMicroEmulation-07-16.afb  Resilmesh-RCTI-UberMicroEmulation-07-16.json  Resilmesh-RCTI-UberMicroEmulation-30-05-v2.afb  Resilmesh-RCTI-UberMicroEmulation-30-05-v2.json  Resilmesh-RCTI-UberMicroEmulation.afb  Resilmesh-RCTI-UberMicroEmulation.json
sanic_web_server/src/attack_flow/: flow_handler.py  flowstatemachine.py
sanic_web_server/src/server/: config.py  correlate.py  db.py  server.py
sanic_web_server/src/stix/: complete_oca_framework.py  schemas.py  stixIoB.py
sanic_web_server/tests/: local_curl_test.py  test-iob-1.py
sanic_web_server/tests/attckflow/: validate_attackflow.py
(+13 files in other folders)
