[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RCTI"
version = "0.1.0"
description = "Resilmesh task 4.4 share folder"
authors = [{name = "TUS", email = "dev@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "sanic>=22.0.0",
    "neo4j>=5.0.0",
    "stix2>=3.0.0",
    "stix2-patterns>=2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/XiLan-ashley/RCTI.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
